// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`utils:runQuery can execute multiple query 1`] = `
Array [
  Array [
    RowDataPacket {
      "1": 1,
    },
  ],
  Array [
    RowDataPacket {
      "2": 2,
    },
  ],
]
`;

exports[`utils:runQuery can execute single query 1`] = `
Array [
  RowDataPacket {
    "1": 1,
  },
]
`;

exports[`utils:runQuery can substitute values in query 1`] = `
Array [
  RowDataPacket {
    "1": 1,
  },
]
`;
